--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<div class="loading" *ngIf="loading"></div>
 <mat-card>
     <b><span>Thống kê sản phẩm và số lượng sản phẩm của cửa hàng</span></b>
 </mat-card>
