--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <div class="wrapper sticky">
   <nav class="navbar-fixed-top">
     <a href="#" class="logo">
-      <mat-icon>storefront</mat-icon> My Home Store
+      <mat-icon>storefront</mat-icon> Gian hàng của tôi
     </a>
     <ul>
       <li>
