--- a/src/app/material-component/category/category.component.html
+++ b/src/app/material-component/category/category.component.html
@@ -1,3 +1,4 @@
+<div class="loading" *ngIf="loading"></div>
 <mat-card>
     <b><span>Quản lý danh mục sản phẩm</span></b>
     <button mat-flat-button color="primary" class="float-right" (click)="handleAdd()">
