--- a/src/app/material-component/dialog/change-password/change-password.component.html
+++ b/src/app/material-component/dialog/change-password/change-password.component.html
@@ -1,3 +1,4 @@
+<div class="loading" *ngIf="loading"></div>
 <mat-toolbar style="background-color: darkturquoise;">
     <mat-toolbar-row fxLayout="row">
         <span style="color: red;">Đổi mật khẩu</span>
