--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -1,3 +1,4 @@
+<div class="loading" *ngIf="loading"></div>
 <div style="display: flex; justify-content: center; align-items: center;">
     <div *ngIf="user" style="margin-right: 10px;">
         {{user.name}}
