--- a/src/app/best-seller/best-seller.component.html
+++ b/src/app/best-seller/best-seller.component.html
@@ -34,9 +34,9 @@
             <li class="timeline-inverted">
                 <div class="timeline-image">
                     <h4>
-                        Be Part
+                        Cảm ơn 
                         <br />
-                        Of Our
+                        quý khách 
                     </h4>
                 </div>
             </li>
