--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,5 +15,5 @@
   </nav>
 </div>
 <div class="footer" id="signup">
-  <h2>All right reserved Quốc Việt</h2>
+  <h2>Bản quyền thuộc Nguyễn Quốc Việt</h2>
 </div>
