--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -10,8 +10,8 @@
 </div>
 
 <mat-menu #profile="matMenu" class="mymegamenu">
-    <button mat-menu-item (click)="logout()">
-        <mat-icon>edit_location</mat-icon>Chỉnh sửa thông tin cá nhân 
+    <button mat-menu-item (click)="edit()">
+        <mat-icon>edit_location</mat-icon>Thông tin cá nhân 
     </button>
 
     <button mat-menu-item (click)="changePassword()">
