--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,3 +1,4 @@
+<div class="loading" *ngIf="loading"></div>
 <mat-toolbar style="background-color: darkturquoise;">
     <mat-toolbar-row fxLayout="row">
         <span style="color: red;">Thông tin cá nhân</span>
@@ -10,29 +11,30 @@
 
 <mat-dialog-content class="mat-typography">
     <div fxFlex fxLayout="column">
-        <div fxLayout="row wrap">
-            <mat-form-field appearance="standard" fxFlex>
-                <mat-label>Tên người dùng</mat-label>
-                <input matInput required value="{{ user.name }}">
-            </mat-form-field>
-            <div style="margin-left: 10px;"></div>
-            <mat-form-field appearance="standard" fxFlex>
-                <mat-label>Số điện thoại</mat-label>
-                <input matInput required value="{{ user.contactNumber }}">
-            </mat-form-field>
-        </div>
-
-        <div fxLayout="row wrap">
-            <mat-form-field appearance="standard" fxFlex>
-                <mat-label>Tên đăng nhập</mat-label>
-                <input matInput required value="{{ user.userName }}" disabled="true" >
-            </mat-form-field>
-        </div>
+      <div fxLayout="row wrap">
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Tên người dùng</mat-label>
+          <input matInput required [(ngModel)]="user.name">
+        </mat-form-field>
+        <div style="margin-left: 10px;"></div>
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Số điện thoại</mat-label>
+          <input matInput required [(ngModel)]="user.contactNumber">
+        </mat-form-field>
+      </div>
+  
+      <div fxLayout="row wrap">
+        <mat-form-field appearance="standard" fxFlex>
+          <mat-label>Tên đăng nhập</mat-label>
+          <input matInput required value="{{ user.userName }}" disabled="true">
+        </mat-form-field>
+      </div>
     </div>
-</mat-dialog-content>
+  </mat-dialog-content>
+  
 
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" type="submit">
+    <button mat-raised-button color="primary" type="submit" (click)="updateUser()">
         <mat-icon>save</mat-icon>Xác nhận
     </button>
 
