--- a/src/app/layouts/full/header/header.component.scss
+++ b/src/app/layouts/full/header/header.component.scss
@@ -1,7 +1,15 @@
 .profile-image {
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     object-fit: cover;
     image-rendering: pixelated;
+}
+
+.profile-home {
+    display: flex;
+    border: 1px solid #ccc;
+    padding: 3%;
+    align-items: center;
+    border-radius: 15%;
 }
