--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -16,9 +16,9 @@
 </div>
 
 <mat-menu #profile="matMenu" class="mymegamenu">
-    <button mat-menu-item (click)="edit()">
+    <!-- <button mat-menu-item (click)="edit()">
         <mat-icon>edit_location</mat-icon>Thông tin cá nhân
-    </button>
+    </button> -->
 
     <button mat-menu-item (click)="changePassword()">
         <mat-icon>password</mat-icon>Đổi mật khẩu
