--- a/src/app/information-view/information-view.component.scss
+++ b/src/app/information-view/information-view.component.scss
@@ -21,8 +21,13 @@
 
 
 .imageBase64 {
-    max-width: 80px;
+    max-width: 150px;
     // max-height: 125px;
+    display: flex;
+    border: 1px solid #ccc;
+    padding: 3%;
+    align-items: center;
+    border-radius: 15%;
 }
 
 .delete-button {
@@ -54,4 +59,18 @@
     left: 50%;
     transform: translateX(-50%);
     white-space: nowrap;
+}
+
+.icon-edit {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 1px solid transparent;
+    border-radius: 25%;
+    transition: all 0.3s ease;
+}
+
+.icon-edit:hover {
+    transform: scale(1.2); 
 }
